<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="warning_need_token">You need to request an access token first</string>
    <string name="code">Code: %1$s</string>
    <string name="token">Access Token: %1$s</string>
    <string name="btn_get_profile">Get User Profile</string>
    <string name="btn_req_code">Request Code</string>
    <string name="btn_req_token">Request Token</string>
    <string name="btn_clear_credentials">Clear WebView Credentials</string>
    <string name="com_spotify_sdk_redirect_scheme">yourscheme</string>
    <string name="com_spotify_sdk_redirect_host">yourhost</string>


    <string name="title_activity_remote_java">SDK Remote jv</string>
    <string name="title_activity_remote_kotlin">SDK Remote kt</string>

    <!-- Errors -->
    <string name="err_spotify_disconnected">"Spotify is not Connected. Use one of the 'connect' buttons"</string>
    <string name="err_generic_toast">An error has occurred. Check the logs to know more.</string>

    <!-- Connect Auth -->
    <string name="connect">Connect</string>
    <string name="authorize">Connect and Authorize</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>

    <!-- Controls -->
    <string name="on_demand_feedback">Can play on demand? %1$b</string>
    <string name="is_in_collection_feedback">Is in the user collection? %1$b</string>
    <string name="command_feedback">"'%1$s' command successful!"</string>
    <string name="command_response">"'%1$s' command response"</string>
    <string name="connect_switch_to_local">Switch to Local Playback</string>
    <string name="play_podcast_button_label">Play podcast</string>
    <string name="play_album_button_label">Play album</string>
    <string name="play_artist_button_label">Play artist</string>
    <string name="play_playlist_button_label">Play playlist</string>
    <string name="play_track_button_label">Play track</string>
    <string name="get_collection_state">Get Collection state</string>
    <string name="save_uri">Save to Collection</string>
    <string name="remove_uri">Remove from Collection</string>
    <string name="browse_content">Browse Content</string>
    <string name="subscribe_to_capabilities">Get Capabilities</string>
    <string name="subscribe_to_current_track">Subscribe to playerstate</string>
    <string name="subscribe_to_player_context">Subscribe to playercontext</string>
    <string name="title_player_context">Player Context</string>
    <string name="title_current_track">Current Track</string>
    <string name="title_image_size">Image size</string>
    <string name="title_image_scale_type">Scale type</string>

    <string name="app_name">Area</string>
    <string name="action_settings">Settings</string>
    <string name="search_button">Search</string>
    <string name="search_text">Search…</string>
    <string name="player_button">Player</string>
    <string name="playlist_button">Playlists</string>
    <string name="searched_song">Name</string>

    <string name="play_button">Play</string>
    <string name="add_favorite_button">Add to favorite</string>
    <string name="add_playlist_button">Add to playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="song_name">Piosenka 1</string>
    <string name="tutorial">Tutorial</string>
    <string name="sort_name">Sortuj playlisty alfabetycznie</string>
    <string name="sort_size_max">Sortuj playlisty od najdłuższej</string>
    <string name="sort_size_min">Sortuj playlisty od najkrótszej</string>
    <string name="sort_date">Sortuj playlisty po datcie dodania</string>

    <string name="facebook_app_id">659382484942753</string>
    <string name="fb_login_protocol_scheme">fb659382484942753</string>
    <string name="google_map_key">AIzaSyDxJngsgdUaxhGS-SBnHLf4KHZhmdxMwNs</string>

    <string name="simple_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="dummy">The best coffee, cream with vanilla and chocolate to let think it is a delicious and our favorite dessert the Tiramissu</string>


    <string name="welcome_message">World\'s Greatest!</string>
    <string name="spotify_login">Spotify Login</string>
    <string name="spotify_logout">Logout</string>
    <string name="search">Search</string>
    <string name="playlist">My Playlist</string>
    <string name="find_spotify_user">Find Spotify User</string>
    <string name="username">Username</string>
    <string name="userId">User ID</string>
    <string name="find_music">Find Music</string>
    <string name="image_result">Image result</string>
    <string name="search_user_title">Search for user</string>
    <string name="user_search_field">Write a username here</string>
    <string name="avatarImageView">User profile picture</string>
    <string name="rowitemText">TextView</string>
    <string name="artist">Artists</string>
    <string name="albums">Albums</string>
    <string name="top_tracks">Top tracks</string>
    <string name="playlist_tracks">Tracks from playlist</string>
    <string name="view_more">View more</string>
    <string name="plus_sign">+</string>
</resources>
