<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SpotifyPlaylist.SearchSpotifyPlaylistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        tools:context=".SpotifyPlaylist.MainSpotifyPlaylistActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchInputLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.85">

            <EditText
                android:id="@+id/searchText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:hint="Search..." />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="match_parent"
            android:background="?attr/actionBarItemBackground"
            android:onClick="searchSongs"
            android:text="@string/search_button"
            app:srcCompat="@drawable/icon_search" />
    </LinearLayout>

    <Button
        android:id="@+id/player_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_shape"
        android:onClick="openPlayer"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/player_button"
        android:textColor="#000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/playlist_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_shape"
        android:onClick="openPlaylists"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/playlist_button"
        android:textColor="#000"
        android:textSize="30sp" />

</LinearLayout>